--- a/springboot-rest/src/main/webapp/index.html
+++ b/springboot-rest/src/main/webapp/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-
+测试页面
 </body>
 </html>
